--- a/style.css
+++ b/style.css
@@ -192,9 +192,11 @@ header h1 {
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
     scroll-padding: 1rem;
-    max-width: 55%;
+    max-width: 125%;
+    width: 125%;
     margin: 0 auto;
     overflow: hidden;
+    margin-left: -30%;
 }
 
 .slide {
@@ -249,46 +251,40 @@ header h1 {
     background-color: #333;
 }
 
-#pros {
-    position: absolute;
-    top: 60%;
-    left: 10%;
-    transform: translateY(-50%);
+.pros {
     background-color: #F8E600;
     color: black;
     padding: 1rem;
-    width: 60%;
     border-radius: 8px;
     font-size: x-large;
     padding-top: 5em;
     padding-bottom: 10em;
     padding-left: 3em;
+    margin-left: 3em;
+    margin-right: -200%;
 }
 
-#pros ul {
+.pros ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-#pros li {
+.pros li {
     margin: 0.5rem 0;
 }
 
 #promotion {
-    position: absolute;
-    top: 60%;
-    right: 10%;
-    transform: translateY(-50%);
     background-color: black;
     color: white;
     padding: 1rem;
-    width: 20%;
     border-radius: 8px;
     font-size: x-large;
     padding-bottom: 9em;
-    padding-top: 6em;
-    z-index: 50000;
+    padding-top: 3em;
+    margin-top: -20%;
+    margin-left: -4em;
+    margin-right: 3em;
 }
 
 #promotion button {
@@ -299,6 +295,8 @@ header h1 {
     border: none;
     font-size: x-large;
     z-index: 3000;
+    margin: 0.2em;
+    width: -webkit-fill-available;
 }
 
 #promotion button a {
@@ -364,7 +362,7 @@ header h1 {
         display: block;
     }
 
-    #pros {
+    .pros {
         position: relative;
         top: unset;
         left: unset;
@@ -374,9 +372,10 @@ header h1 {
         font-size: small;
         margin-right: 10%;
         padding-bottom: 3em;
+        margin-left: 0;
     }
 
-    #pros h2 {
+    .pros h2 {
         font-weight: bold;
     }
 
@@ -390,6 +389,7 @@ header h1 {
         font-size: small;
         margin-top: -2em;
         margin-left: 10%;
+        margin-right: 0;
     }
 
     #promotion h2 {
@@ -403,8 +403,9 @@ header h1 {
     .slider {
         max-width: 100%;
         width: 100%;
-        /*margin-left: -25%;*/
+        /* margin-left: -25%; */
         scroll-padding: 0;
+        margin-left: 0;
     }
 
     #gallery {
@@ -431,5 +432,9 @@ header h1 {
 
     section {
         margin-top: 1em;
+    }
+
+    .row {
+        width: 100%;
     }
 }
